--- a/pom.xml
+++ b/pom.xml
@@ -166,6 +166,11 @@
             <artifactId>mapjfx</artifactId>
             <version>3.1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.8</version>
+        </dependency>
     </dependencies>
 
 
